# yaqd-microchip

./: .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: run-entry-points.yml
yaqd_microchip/: __init__.py  _mcp3428.py  _mcp9600.py  mcp3428.avpr  mcp3428.toml  mcp9600.avpr  mcp9600.toml
