[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_microchip"
dist-name = "yaqd-microchip"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://yaq.fyi/"
description-file = "README.md"
requires-python = ">=3.7"
requires = ["yaqd-core>=2021.3.0", "smbus2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://gitlab.com/yaq/yaqd-microchip"
Issues = "https://gitlab.com/yaq/yaqd-microchip/-/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-mcp3428 = "yaqd_microchip._mcp3428:MCP3428.main"
yaqd-mcp9600 = "yaqd_microchip._mcp9600:MCP9600.main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
